style.css
/* --------------------------------- General -------------------------------- */
body,
html {
    width: 100%;
    height: 100%;
    margin: 0;
    padding: 0;
    background-color: #fff;
    font-family: 'Roboto Condensed', sans-serif;
    line-height: 1.42857143;
    color: #333;
}

.reviews-container::-webkit-scrollbar {
    all: unset;
}

.invisible {
    opacity: 0;
}

.gone {
    display: none !important;
}

ul {
    list-style-type: none;
}

a {
    outline: none;
    text-decoration: none;
    font-size: 1em;
    font-weight: 700;
    transition: all 0.4s ease-in-out;
}

a:link {
    color: #000;
}

a:visited {
    color: #000;
}

.title {
    font-weight: 800;
    font-size: 1.3em;
    text-align: center;
}

button {
    border: none;
    outline: none;
    padding: 3% 5%;
    background-color: #e31f2d;
    color: #fff;
    font-size: 1em;
    font-weight: 700;
    text-transform: uppercase;
    box-shadow: 0 0 5px #333;
}

.header,
.logo-container,
#head-spacer,
#logo {
    z-index: 999;
}

.instructions p,
.support p {
    color: #e31f2d;
    font-weight: 800;
}

.sales p {
    margin: 3% 5%;
    transition: all 0.4s ease-in-out;
}

.get-call {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 40%;
}

.tv {
    top: 0;
    transition: all 0.4s ease-out;
}

.tv-screen,
.tv-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.advantage .check {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 15%;
    padding: 0 3%;
}

.tv-screen {
    width: 100%;
    height: 100%;
    background: url(./resources/tv.png) no-repeat center;
    background-size: cover;
}

.opportunities .title {
    padding: 0 3%;
}

.opportunity .title {
    padding: 0;
    text-align: initial;
    font-size: 1em;
}

.opportunity .text {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 60%;
}

.subscription .sub-header {
    width: 100%;
    text-align: center;
}

.econom .sub-header {
    background-color: #efefef;
}

.main .sub-header {
    background-color: #e31f2d;
    color: #fff;
}

.sub-content .sub-point {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.sub-point .icon {
    display: flex;
    align-items: center;
    justify-content: center;
    width: 20%;
}

.sub-point img {
    transform: scale(0.8);
}

.sub-point .text {
    width: 80%;
    margin: 0 0 0 5%;
}

.payment-methods {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 40%;
    padding: 3%;
    background: linear-gradient(#fff, #ff0f0f00 95%, #fff),
    url(./resources/bg3.jpg) no-repeat center;
}

.economy-head {
    background-color: #e31f2d;
    color: #fff;
}

.economy-point .text {
    display: flex;
    justify-content: center;
}

.request {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: url(./resources/photo1.jpg) no-repeat center;
    padding: 3%;
}

.economy-point .check {
    height: 60%;
}

/* ------------------------------Modal------------------------------ */
.modal-background {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    background-color: rgba(0, 0, 0, 0.8);
    z-index: 1000;
}
/* ... */

